# gerenciador-de-voluntarios

./: README.md  index.html  package-lock.json  package.json
backend/: README.md  main.py  pyproject.toml  test_main.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/api/: volunteers.ts
frontend/src/components/: Filters.tsx  Header.tsx  StatusBadge.tsx  VolunteerForm.tsx  VolunteersTable.tsx
frontend/src/constants/: volunteerOptions.ts
frontend/src/hooks/: useVolunteers.ts
frontend/src/pages/VolunteerCreate/: index.tsx
frontend/src/pages/VolunteerEdit/: index.tsx
frontend/src/pages/VolunteersList/: index.tsx
frontend/src/routes/: index.tsx
frontend/src/schemas/: volunteerSchema.ts
frontend/src/types/: volunteer.ts
src/: App.tsx
